--- a/salidas/templates/salidas/vale_pdf.html
+++ b/salidas/templates/salidas/vale_pdf.html
@@ -94,28 +94,28 @@
         </table>
 
         <table class="signatures">
-            <colgroup>
+        <colgroup>
             <col style="width:33%;">
             <col style="width:33%;">
             <col style="width:33%;">
-            </colgroup>
-            <tr>
+        </colgroup>
+        <tr>
             <td class="sig-cell">
-                <div class="signature-line"></div>
-                <strong>Entregó</strong><br>
-                <strong>Jefe de Oficina</strong>
+            <strong class="sig-label">Entregó</strong>
+            <hr class="signature-line"/>
+            <span class="sig-role">Jefe de Oficina</span>
             </td>
             <td class="sig-cell">
-                <div class="signature-line"></div>
-                <strong>VoBo</strong><br>
-                <strong>Jefe de Departamento</strong>
+            <strong class="sig-label">VoBo</strong>
+            <hr class="signature-line"/>
+            <span class="sig-role">Jefe de Departamento</span>
             </td>
             <td class="sig-cell">
-                <div class="signature-line"></div>
-                <strong>Recibió</strong><br>
-                <strong>Solicitante</strong>
+            <strong class="sig-label">Recibió</strong>
+            <hr class="signature-line"/>
+            <span class="sig-role">Solicitante</span>
             </td>
-            </tr>
+        </tr>
         </table>
     </body>
 </html>
