--- a/salidas/static/salidas/css/vale.css
+++ b/salidas/static/salidas/css/vale.css
@@ -1,6 +1,7 @@
 @page {
     size: A4 portrait;
     margin: 1cm;
+    background-color: #fff;
 }
 
 @font-face {
@@ -25,16 +26,6 @@ body {
     position: relative;
 }
 
-.watermark {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: rotate(-45deg) translate(-50%, -50%);
-    font-size: 6em;
-    color: rgba(0,0,0,0.1);
-    z-index: 1000;
-    pointer-events: none;
-}
 
 /* HEADER: logos en extremos con tabla */
 .header-table {
