--- a/salidas/templates/salidas/vale_pdf.html
+++ b/salidas/templates/salidas/vale_pdf.html
@@ -5,48 +5,68 @@
         <meta charset="UTF-8">
         <title>Vale de Salida {{ vale.folio }}</title>
         <link rel="stylesheet" href="{% static 'salidas/css/vale.css' %}">
+        <style type="text/css">
+            @page {
+                size: A4 portrait;
+                background-color: #fff;
+
+                @frame header_frame {
+                -pdf-frame-content: header_content;
+                top:    10mm;
+                left:   10mm;
+                width:  190mm;
+                height: 50mm;  
+                }
+
+                @frame content_frame {
+                top:    60mm;   
+                left:   10mm;
+                width:  190mm;
+                height: auto;
+                }
+            }
+            </style>
     </head>
     <body>
 
         <!-- HEADER -->
-        <header class="vale-header">
-        <table class="header-table" width="100%" cellspacing="0" cellpadding="0">
-            <colgroup>
-            <!-- ancho fijo de los logos -->
-            <col style="width:43mm;">
-            <!-- columna central: auto -->
-            <col>
-            <col style="width:52.3mm;">
-            </colgroup>
-            <tr>
-            <!-- Logo izquierda -->
-            <td class="logo-left">
-                <img src="{% static 'salidas/img/logo_gob.png' %}"
-                    alt="Gobierno de México"
-                    class="logo-img-gob">
-            </td>
-            <!-- Texto central, verticalmente centrado -->
-            <td class="header-text">
-                <p class="header-line header-line--first">
-                Servicios de Salud del Instituto Mexicano de Seguro Social para el Bienestar
-                </p>
-                <p class="header-line">Coordinación Estatal de Campeche</p>
-                <p class="header-line">Departamento de Tecnología de la Información</p>
-            </td>
-            <!-- Logo derecha -->
-            <td class="logo-right">
-                <img src="{% static 'salidas/img/logo_imss.png' %}"
-                    alt="IMSS Bienestar"
-                    class="logo-img-imss">
-            </td>
-            </tr>
-        </table>
-        </header>
+        <div id="header_content">
+            <table class="header-table" width="100%" cellspacing="0" cellpadding="0">
+                <colgroup>
+                <!-- ancho fijo de los logos -->
+                <col style="width:43mm;">
+                <!-- columna central: auto -->
+                <col>
+                <col style="width:52.3mm;">
+                </colgroup>
+                <tr>
+                <!-- Logo izquierda -->
+                <td class="logo-left">
+                    <img src="{% static 'salidas/img/logo_gob.png' %}"
+                        alt="Gobierno de México"
+                        class="logo-img-gob">
+                </td>
+                <!-- Texto central, verticalmente centrado -->
+                <td class="header-text">
+                    <p class="header-line header-line--first">
+                    Servicios de Salud del Instituto Mexicano de Seguro Social para el Bienestar
+                    </p>
+                    <p class="header-line">Coordinación Estatal de Campeche</p>
+                    <p class="header-line">Departamento de Tecnología de la Información</p>
+                </td>
+                <!-- Logo derecha -->
+                <td class="logo-right">
+                    <img src="{% static 'salidas/img/logo_imss.png' %}"
+                        alt="IMSS Bienestar"
+                        class="logo-img-imss">
+                </td>
+                </tr>
+            </table>
+            <h1 class="title">Vale de Salida de Almacén</h1>
+            <h1 class="title">Folio {{ vale.folio }}</h1>
+        </div>
 
-
-        <h1 class="title">Vale de Salida de Almacén</h1>
-        <h1 class="title">Folio {{ vale.folio }}</h1>
-
+        <div style="-pdf-frame: content_frame;">
         <div class="fields">
             <p><strong>Fecha de solicitud:</strong> {{ vale.fecha_creacion|date:"d/m/Y" }}</p>
             <p><strong>Solicitante:</strong> {{ vale.solicitante.nombre }}</p>
@@ -114,5 +134,6 @@
             </td>
         </tr>
         </table>
+        </div>
     </body>
 </html>
