--- a/salidas/templates/salidas/vale_pdf.html
+++ b/salidas/templates/salidas/vale_pdf.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns:pdf="http://ns.adobe.com/pdf/1.3/">
     <head>
         <meta charset="UTF-8">
         <title>Vale de Salida {{ vale.folio }}</title>
@@ -22,7 +22,15 @@
                 top:    60mm;   
                 left:   10mm;
                 width:  190mm;
+                bottom: 20mm;
+                }
+
+                @frame footer_frame {
+                -pdf-frame-content: footer_content;
                 bottom: 10mm;
+                left:   10mm;
+                width:  190mm;
+                height:  8mm;
                 }
             }
             </style>
@@ -134,6 +142,10 @@
             </td>
         </tr>
         </table>
+        </div>
+
+        <div id="footer_content" style="text-align:center; font-size:8pt;">
+        Página <pdf:pagenumber/> de <pdf:pagecount/>
         </div>
     </body>
 </html>
