feat(salidas): mostrar correctamente todos los productos en la tabla de edición de vales
Ya se visualizan en la tabla todos los productos previamente agregados al vale, incluyendo productos hijos. El formulario de edición ahora muestra los datos mínimos necesarios para confirmar que la información fue cargada correctamente.

--- a/salidas/templates/salidas/modales/modal_editar_salida.html
+++ b/salidas/templates/salidas/modales/modal_editar_salida.html
@@ -28,8 +28,8 @@
 
 <!-- Variables necesarias para JS -->
 <script>
-  // Datos usados por el JS para autollenado y validación
-    window.todosProductos = {{ productos_disponibles_json|safe }};
+    window.modoSoloVista = {{ solo_vista|yesno:"true,false" }};
+    window.todosProductos = {{ productos_json|safe }};
 </script>
 
 <!-- Script específico para este modal -->
