--- a/salidas/templates/salidas/modales/fragmento_form_salida_edicion.html
+++ b/salidas/templates/salidas/modales/fragmento_form_salida_edicion.html
@@ -79,7 +79,7 @@
             {% for detalle in detalles %}
             <tr class="linea-form" data-producto-id="{{ detalle.producto.id }}">
                 <td>
-                <select class="form-control select2-producto-auto"
+                <select name="producto_id[]" class="form-control select2-producto-auto"
                         {% if solo_vista %}disabled{% endif %}>
                     <option></option>
                     {% for p in productos_disponibles %}
@@ -90,6 +90,7 @@
                         data-serie="{{ p.numero_serie }}"
                         data-tiene-serie="{{ p.tiene_serie|yesno:'true,false' }}"
                         data-tiene-hijos="{{ p.productos_hijos.count|yesno:'true,false' }}"
+                        data-stock="{{ p.stock }}"
                         {% if p.id == detalle.producto.id %}selected{% endif %}>
                         {{ p.tipo.nombre }} – {{ p.nombre }}
                     </option>
@@ -101,7 +102,8 @@
                 <td class="color-cell">{{ detalle.producto.color }}</td>
                 <td class="serie-cell">{{ detalle.producto.numero_serie }}</td>
                 <td>
-                <input type="number"
+                <input name="cantidad[]" 
+                        type="number"
                         class="form-control cantidad-input"
                         value="{{ detalle.cantidad }}"
                         {% if solo_vista or detalle.producto.tiene_serie %}readonly{% endif %}>
