--- a/salidas/templates/salidas/modales/fragmento_form_salida_edicion.html
+++ b/salidas/templates/salidas/modales/fragmento_form_salida_edicion.html
@@ -96,6 +96,8 @@
                     </option>
                     {% endfor %}
                 </select>
+                <input type="hidden" name="producto_id[]" value="{{ detalle.producto.producto_padre_id|default:detalle.producto.id }}">
+                <input type="hidden" name="producto_hijo_id[]" value="{% if detalle.producto.producto_padre_id %}{{ detalle.producto.id }}{% endif %}">
                 </td>
                 <td class="marca-cell">{{ detalle.producto.marca.nombre }}</td>
                 <td class="modelo-cell">{{ detalle.producto.modelo }}</td>
