--- a/salidas/templates/salidas/modales/fragmento_form_salida_edicion.html
+++ b/salidas/templates/salidas/modales/fragmento_form_salida_edicion.html
@@ -94,7 +94,10 @@
                     {{ form.DELETE }}
                 </td> 
                 <td>
-                    <select name="{{ form.producto.name }}"
+                    <input type="hidden"
+                        name="{{ form.prefix }}-id"
+                        value="{{ form.instance.id }}">
+                    <select name="{{ form.prefix }}-producto"
                             class="form-control select2-producto-auto"
                             {% if solo_vista %}disabled{% endif %} required>
                         <option value="">Selecciona un producto…</option>
