fix(modal-editar-salida): preservar selección de productos y datos al re-renderizar tras error
- Se añadió `data-producto-id` a cada `<tr>` para recuperar el valor seleccionado
- Se actualizó el bloque `success` del AJAX para volver a `.val(id).trigger('change')` y llamar a `actualizarFilaPrecargada()` en cada fila
- Se reindexa correctamente el formset tras una validación fallida

--- a/salidas/templates/salidas/modales/fragmento_form_salida_edicion.html
+++ b/salidas/templates/salidas/modales/fragmento_form_salida_edicion.html
@@ -84,7 +84,7 @@
         </thead>
         <tbody id="formset-container" data-total-forms="{{ formset.total_form_count }}">
             {% for form in formset %}
-            <tr class="linea-form" data-form-index="{{ forloop.counter0 }}">
+            <tr class="linea-form" data-form-index="{{ forloop.counter0 }}" data-producto-id="{{ form.producto.value|default:'' }}">
                 <td colspan="7" class="d-none">
                     {{ form.DELETE }}
                 </td> 
@@ -139,7 +139,7 @@
         </tbody>
         <!-- Fila vacía como template para clonar desde JS -->
         <script type="text/template" id="fila-vacia-template">
-        <tr class="linea-form" data-form-index="__prefix__">
+        <tr class="linea-form" data-form-index="__prefix__" data-producto-id="">
             <td>
                 <select name="form-__prefix__-producto"
                         class="form-control select2-producto-auto"
